fixed alignment on graphic project images

--- a/css/styles.css
+++ b/css/styles.css
@@ -492,6 +492,8 @@ footer {
       width: 100%;
       height: 50%;
       margin-right: 0; }
+  .projects__carousel-graphic img {
+    margin: auto; }
   .projects__carousel-graphic--image {
     width: 41%;
     height: 50%;
