--- a/sass/pages/_projects.scss
+++ b/sass/pages/_projects.scss
@@ -76,7 +76,9 @@
     
 
         &-graphic {
-
+            & img {
+                margin: auto;
+            }
             &--image {
                 width: 41%;
                 height: 50%;
